--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-body {
-    background-color: rgb(255, 245, 232);
+html,body{
+    height:100%;
 }
-
+.carousel,.carousel-item,.active{
+    height:100%;
+}
+.carousel-inner{
+    height:100%;
+}
