--- a/style.css
+++ b/style.css
@@ -1,12 +1,72 @@
 html,body{
     height:100%;
+    background-color: rgb(255, 242, 224);
+    color: #4a2e10;
 }
 body {
     padding-top: 59px;
 }
-.carousel,.carousel-item,.active{
+.carousel,.carousel-item,
+.active{
     height:100%;
 }
 .carousel-inner{
     height:100%;
+}
+.carousel-item {
+    background-size: cover;
+}
+.bg1 {
+    background: url(img/bg.png) no-repeat center center fixed; 
+}
+.bg2 {
+    background: url(img/bg2.png) no-repeat center center fixed; 
+}
+.bg3 {
+    background: url(img/bg3.png) no-repeat center center fixed; 
+}
+
+.btn-primary {
+    color: #4a2e10;
+    background-color: rgb(255, 251, 241);
+    border-color: rgb(255, 251, 241);
+}
+
+.btn-primary:hover {
+    color: #4a2e10;
+    background-color: rgb(236, 215, 183);
+    border-color: rgb(236, 215, 183);
+}
+
+.btn-primary:focus,
+.btn-primary.focus {
+    box-shadow: 0 0 0 .2rem rgba(161, 142, 113, 0.5);
+}
+
+.btn-primary:not(:disabled):not(.disabled):active,
+.btn-primary:not(:disabled):not(.disabled).active,
+.show>.btn-primary.dropdown-toggle {
+    color: #4a2e10;
+    background-color: rgb(186, 165, 133);
+    border-color: rgba(161, 142, 113);
+}
+
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgba(161, 142, 113, 0.5);
+}
+
+.form-control:focus {
+    border-color: rgba(161, 142, 113);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(161, 142, 113, 0.6);
+}
+
+.breadcrumb {
+    margin-top:20px;
+    margin-left: 20px;
+}
+
+.breadcrumb-item a {
+    color: #4a2e10;
 }
