--- a/style.css
+++ b/style.css
@@ -40,6 +40,18 @@ body {
 .carousel-item {
     background-size: cover;
 }
+
+.carousel-item-bg {
+    background-color:rgba(58, 58, 58, 0.5);
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.go-btn {
+    width: 124px;
+    border-radius: 0;
+}
+
 .bg1 {
     background: url(img/bg.png) no-repeat center center fixed; 
 }
