--- a/style.css
+++ b/style.css
@@ -5,31 +5,6 @@ body {
     padding-top: 59px;
 }
 
-.dropdown-menu li {
-    position: relative;
-}
-.dropdown-menu .dropdown-submenu {
-    display: none;
-    position: absolute;
-    left: 100%;
-    top: -7px;
-    background-color: #343a40;
-}
-
-.dropdown-menu .dropdown-submenu li a {
-    color: #d4d7d9;
-}
-.dropdown-menu .dropdown-submenu li a:hover {
-    background-color: #52575c;
-}
-.dropdown-menu .dropdown-submenu-left {
-    right: 100%;
-    left: auto;
-}
-.dropdown-menu > li:hover > .dropdown-submenu {
-    display: block;
-}
-
 .carousel,.carousel-item,
 .active{
     height:100%;
@@ -71,14 +46,39 @@ body {
     color: #5c7fbf;
 }
 
-#productHeader {
+.productTitle {
+    padding-bottom: 8px;
     border-bottom: 2px solid rgb(169, 169, 169);
+}
+
+.filters {
+    padding-top: 8px;
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
 }
 
 #productContent {
     margin-top: 16px;
 }
 
+.pPrice {
+    font-weight: bold;
+}
+
+.quantity-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 8px;
+    font-size: 20px;
+}
+
+.hidden {
+    display: none !important;
+}
+
+/*
 .productImg {
     width: 100%;
     height: 300px;
@@ -122,7 +122,7 @@ body {
     width: 100%;
 }
 
-/* maybe relevant later??
+ maybe relevant later??
 .btn-primary {
     color: #4a2e10;
     background-color: rgb(255, 251, 241);
@@ -158,3 +158,4 @@ body {
     border-color: rgba(161, 142, 113);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(161, 142, 113, 0.6);
 }
+*/
