--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html,body{
     height:100%;
 }
 
+.padNav {
+    padding-top: 88px;
+}
+
 .carousel,.carousel-item,.carousel-inner,
 .active{
     height:100%;
@@ -32,13 +36,8 @@ html,body{
     background: url(img/bg3.png) no-repeat center center fixed; 
 }
 
-.breadcrumb {
-    margin-top:20px;
-    margin-left: 20px;
-}
-
-.breadcrumb-item a {
-    color: #5c7fbf;
+h1 {
+    font-weight: bolder;
 }
 
 .productTitle {
@@ -87,6 +86,44 @@ html,body{
 
 label {
     margin-top: 6px;
+}
+
+i{
+    cursor: pointer;
+    transition: opacity .5s ease;
+    color: gray;
+}
+
+i:hover {
+    font-size: 28px;
+    margin-top: -6px;
+}
+
+.quantity{
+    transition: opacity .5s ease;
+}
+  
+.fade{
+    opacity: 0;
+}
+
+.dark{
+    color: black !important;
+}
+
+.cartArea {
+    width: 100%;
+    height: 450px;
+    border: 2px solid grey;
+    position: relative;
+}
+
+.checkoutArea {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 68px;
+    border-top: 1.4px solid grey;
 }
 
 /*
