--- a/style.css
+++ b/style.css
@@ -176,6 +176,17 @@ i:hover {
     height: 48px;
 }
 
+.empty {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 150px;
+    gap:16px;
+}
+
 /*
 .productImg {
     width: 100%;
