--- a/style.css
+++ b/style.css
@@ -73,10 +73,6 @@ h1 {
     font-size: 20px;
 }
 
-.hidden {
-    display: none !important;
-}
-
 #cat {
     width: 130px;
 }
@@ -194,6 +190,28 @@ i:hover {
     flex-direction: column;
     padding-top: 150px;
     gap:16px;
+}
+
+.loading {
+    top:0;
+    position: absolute;
+    z-index: 999;
+    height: 100vh;
+    width: 100vh;
+    background-color: white;
+}
+
+.animation-center{  
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.hidden {
+    display: none !important;
+    height: 0;
 }
 
 /*
