--- a/style.css
+++ b/style.css
@@ -1,9 +1,49 @@
 html,body{
     height:100%;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+}
+
+footer {
+    padding: 32px;
+    background-color: #333;
+    color:white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+footer div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+footer .brand {
+    width: 30px;
+    height: 30px;
+}
+
+.socmed img {
+    width: auto;
+    height: 30px;
+}
+
+.brand {
+    width: 24px;
+    height: 24px;
+}
+
+.nav-link {
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .padNav {
     padding-top: 80px;
+    min-height: 100vh;
 }
 
 .carousel,.carousel-item,.carousel-inner,
@@ -22,6 +62,15 @@ html,body{
     padding-bottom: 16px;
 }
 
+.carousel-item-bg h4 {
+    font-size: 28px;
+    font-weight: 500;
+}
+
+.carousel-item-bg p {
+    font-size: 18px;
+}
+
 .go-btn {
     width: 124px;
     border-radius: 0;
@@ -37,13 +86,8 @@ html,body{
     background: url(img/bg3.png) no-repeat center center fixed; 
 }
 
-h4 {
-    font-size: 26px;
-    font-weight: 700;
-}
-
 h1 {
-    font-weight: bolder;
+    font-weight: 700;
     font-size: 44px;
 }
 
@@ -53,7 +97,7 @@ h1 {
 }
 
 label {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .filters {
@@ -73,11 +117,13 @@ label {
 }
 
 .pPrice {
-    font-weight: 700;
+    font-weight: 600;
+    font-size: 24px;
 }
 
 .pName {
-    font-size: 28px;
+    font-weight: 400;
+    font-size: 26px;
 }
 
 .quantity-buttons {
@@ -169,7 +215,8 @@ i:hover {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 16px;
+    justify-content: space-evenly;
+    row-gap: 12px;
 }
 
 .cartItem {
@@ -180,7 +227,6 @@ i:hover {
     position: absolute;
     top: 8px;
     right: 12px;
-    color: white;
 }
 
 .cartTitle {
@@ -203,8 +249,12 @@ i:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 150px;
+    padding-top: 120px;
     gap:16px;
+}
+
+.empty h1 {
+    font-weight: 500;
 }
 
 .loading {
@@ -247,88 +297,3 @@ i:hover {
         width: 100%;
     }
 }
-
-/*
-.productImg {
-    width: 100%;
-    height: 300px;
-}
-
-.sideimg {
-    display: flex;
-    flex-direction: column;
-}
-
-#mainimg {
-    width: 100%;
-    height: 480px;
-}
-
-.sideimg img {
-    width: 100%;
-    height: 160px;
-}
-
-.productDetailContent {
-    border: 2px solid grey;
-    border-bottom: 0;
-    padding: 28px;
-}
-
-.selector {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    margin-bottom: 4px;
-}
-
-.selector img {
-    width: 38px;
-    height: 38px;
-}
-
-.btn-add {
-    border-radius: 0;
-    width: 100%;
-}
-
- maybe relevant later??
-.btn-primary {
-    color: #4a2e10;
-    background-color: rgb(255, 251, 241);
-    border-color: rgb(255, 251, 241);
-}
-
-.btn-primary:hover {
-    color: #4a2e10;
-    background-color: rgb(236, 215, 183);
-    border-color: rgb(236, 215, 183);
-}
-
-.btn-primary:focus,
-.btn-primary.focus {
-    box-shadow: 0 0 0 .2rem rgba(161, 142, 113, 0.5);
-}
-
-.btn-primary:not(:disabled):not(.disabled):active,
-.btn-primary:not(:disabled):not(.disabled).active,
-.show>.btn-primary.dropdown-toggle {
-    color: #4a2e10;
-    background-color: rgb(186, 165, 133);
-    border-color: rgba(161, 142, 113);
-}
-
-.btn-primary:not(:disabled):not(.disabled):active:focus,
-.btn-primary:not(:disabled):not(.disabled).active:focus,
-.show>.btn-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 .2rem rgba(161, 142, 113, 0.5);
-}
-
-.form-control:focus {
-    border-color: rgba(161, 142, 113);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(161, 142, 113, 0.6);
-}
-*/
-*/
-
-
