--- a/style.css
+++ b/style.css
@@ -4,6 +4,43 @@ html,body{
     font-weight: 300;
 }
 
+.padNav {
+    padding-top: 80px;
+    min-height: 100vh;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 44px;
+}
+
+a{
+    cursor: pointer;
+}
+
+.loading {
+    top:0;
+    position: absolute;
+    z-index: 999;
+    height: 100vh;
+    width: 100vh;
+    background-color: white;
+}
+
+.hidden {
+    display: none !important;
+    height: 0;
+}
+
+.animation-center{  
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+/* footer */
 footer {
     padding: 32px;
     background-color: #333;
@@ -36,15 +73,18 @@ footer .brand {
     height: 24px;
 }
 
+/* nav bar */
+
 .nav-link {
     font-size: 18px;
     font-weight: 400;
 }
 
-.padNav {
-    padding-top: 80px;
-    min-height: 100vh;
+.nav-item .active {
+    cursor: default;
 }
+
+/* index page */
 
 .carousel,.carousel-item,.carousel-inner,
 .active{
@@ -86,16 +126,18 @@ footer .brand {
     background: url(img/bg3.png) no-repeat center center fixed; 
 }
 
-h1 {
-    font-weight: 700;
-    font-size: 44px;
-}
+/* product page */
 
 .productTitle {
     padding-bottom: 8px;
     border-bottom: 2px solid rgb(169, 169, 169);
 }
 
+#productContent {
+    margin-top: 16px;
+}
+
+/* filters */
 label {
     font-size: 20px;
 }
@@ -108,12 +150,31 @@ label {
     align-items: center;
 }
 
-#productContent {
-    margin-top: 16px;
+#cat {
+    width: 130px;
 }
+
+#sort {
+    width:150px;
+}
+
+/* product/cart items */
 
 .item {
     padding-bottom: 8px;
+}
+
+.details {
+    width: 232px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.productImg,
+.cartImg {
+    width: 232px;
+    height: 232px;
 }
 
 .pPrice {
@@ -134,22 +195,6 @@ label {
     font-size: 20px;
 }
 
-#cat {
-    width: 130px;
-}
-
-#sort {
-    width:150px;
-}
-
-a{
-    cursor: pointer;
-}
-
-.nav-item .active {
-    cursor: default;
-}
-
 i{
     cursor: pointer;
     transition: all .2s ease;
@@ -161,54 +206,7 @@ i:hover {
     margin-top: -6px;
 }
 
-.quantity{
-    transition: opacity .5s ease;
-}
-  
-.fade{
-    opacity: 0;
-}
-
-.dark{
-    color: black !important;
-}
-
-.cartArea {
-    width: 100%;
-    min-height: 425px;
-    height: auto;
-    border: 2px solid grey;
-    position: relative;
-    padding-bottom: 68px;
-}
-
-.checkoutArea {
-    width: 100%;
-    height: 68px;
-    border-top: 1.4px solid grey;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    gap: 3.5%;
-    position: absolute;
-    bottom: 0;
-}
-
-.total {
-    font-weight: bold;
-    font-size: 24px;
-}
-.checkoutBtn {
-    padding-top: 14px;
-    padding-left: 24px;
-    padding-right: 24px;
-    height: 100%;
-    border-radius: 0;
-    font-size: 24px;
-    font-weight: bold;
-}
-
+/* cart specific */
 .cartItems {
     padding: 12px;
     width: 100%;
@@ -227,6 +225,30 @@ i:hover {
     position: absolute;
     top: 8px;
     right: 12px;
+}
+
+/* animations */
+.quantity{
+    transition: opacity .5s ease;
+}
+  
+.fade{
+    opacity: 0;
+}
+
+.dark{
+    color: black !important;
+}
+
+/* cart page */
+
+.cartArea {
+    width: 100%;
+    min-height: 425px;
+    height: auto;
+    border: 2px solid grey;
+    position: relative;
+    padding-bottom: 68px;
 }
 
 .cartTitle {
@@ -257,39 +279,32 @@ i:hover {
     font-weight: 500;
 }
 
-.loading {
-    top:0;
+/* checkout */
+.checkoutArea {
+    width: 100%;
+    height: 68px;
+    border-top: 1.4px solid grey;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    gap: 3.5%;
     position: absolute;
-    z-index: 999;
-    height: 100vh;
-    width: 100vh;
-    background-color: white;
+    bottom: 0;
 }
 
-.animation-center{  
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.total {
+    font-weight: bold;
+    font-size: 24px;
 }
-
-.hidden {
-    display: none !important;
-    height: 0;
-}
-
-.productImg,
-.cartImg {
-    width: 232px;
-    height: 232px;
-}
-
-.details {
-    width: 232px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.checkoutBtn {
+    padding-top: 14px;
+    padding-left: 24px;
+    padding-right: 24px;
+    height: 100%;
+    border-radius: 0;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 @media (max-width: 768px) {
