--- a/wheelstyle.css
+++ b/wheelstyle.css
@@ -12,9 +12,28 @@ canvas {
 #spin-button {
   padding: 10px 20px;
   font-size: 22px;
-  margin-top: 20px;
   border-radius: 0;
 }
 .spin-text {
   text-align: center;
+}
+p {
+  font-size: 20px;
+}
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
+.hidden {
+  display: none !important;
+  height: 0;
+}
+#prizemsg {
+  position: absolute;
+  z-index: 9999;
+  top: 50%;
+  left: 50%;
 }
