--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ html,body{
     min-height: 100vh;
 }
 
+.pageTitle {
+    padding-bottom: 8px;
+    border-bottom: 2px solid rgb(169, 169, 169);
+}
+
 h1 {
     font-weight: 700;
     font-size: 44px;
@@ -127,11 +132,6 @@ footer .brand {
 }
 
 /* product page */
-
-.productTitle {
-    padding-bottom: 8px;
-    border-bottom: 2px solid rgb(169, 169, 169);
-}
 
 #productContent {
     margin-top: 16px;
@@ -367,4 +367,64 @@ form {
 
 .vline {
     border-right: 2px solid rgb(181, 181, 181);
+}
+
+/* leaderboard */
+
+.flexbody {
+    display: flex;
+    flex-direction: column;
+}
+
+.pageTitle,
+.board {
+    flex: 0 1 auto;
+}
+
+.animation {
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.boardHead {
+    font-weight: 500 !important;
+    font-size: 22px !important;
+}
+
+.boardRow {
+    font-size: 18px;
+    width: 85%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin: auto;
+    text-align: left;
+    padding-left: 16px;
+    gap: 8px;
+    border-bottom: 1px solid rgb(181, 181, 181);
+}
+
+.rank {
+    flex-basis: 20%;
+    border-right: 1px solid rgb(181, 181, 181);
+}
+
+.name {
+    flex-basis: 50%;
+    border-right: 1px solid rgb(181, 181, 181);
+}
+
+.spent {
+    flex-basis: 30%;
+}
+
+.row1,
+.row2,
+.row3 {
+    font-weight: 400 !important;
+    background-color: rgb(255, 247, 230);
 }
