--- a/style.css
+++ b/style.css
@@ -38,8 +38,10 @@ a{
 }
 
 .animation-center{  
+    margin-top: -24px;
     z-index: 1000;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -298,7 +300,7 @@ i:hover {
     font-size: 24px;
 }
 .checkoutBtn {
-    padding-top: 14px;
+    padding-top: 6px;
     padding-left: 24px;
     padding-right: 24px;
     height: 100%;
@@ -368,6 +370,17 @@ form {
 .vline {
     border-right: 2px solid rgb(181, 181, 181);
 }
+
+@media (max-width: 768px) { 
+    .vline {
+        border-right: 0;
+    }
+
+    #registerform .row .col-12 {
+        padding-top: 16px;
+    }
+ }
+
 
 /* leaderboard */
 
