--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ html,body{
     font-weight: 300;
 }
 
-.padNav {
+.pad-nav {
     padding-top: 80px;
     min-height: 100vh;
 }
 
-.pageTitle {
+.page-title {
     padding-bottom: 8px;
     border-bottom: 2px solid rgb(169, 169, 169);
 }
@@ -154,7 +154,7 @@ footer .brand {
 
 /* product page */
 
-#productContent {
+#product-content {
     margin-top: 16px;
 }
 
@@ -197,18 +197,18 @@ label {
     align-items: center;
 }
 
-.productImg,
-.cartImg {
+.product-img,
+.cart-img {
     width: 232px;
     height: 232px;
 }
 
-.pPrice {
+.p-price {
     font-weight: 600;
     font-size: 24px;
 }
 
-.pName {
+.p-name {
     font-weight: 400;
     font-size: 26px;
 }
@@ -233,7 +233,7 @@ i:hover {
 }
 
 /* cart specific */
-.cartItems {
+.cart-items {
     padding: 12px;
     width: 100%;
     display: flex;
@@ -243,7 +243,7 @@ i:hover {
     row-gap: 12px;
 }
 
-.cartItem {
+.cart-item {
     position: relative;
 }
 
@@ -268,7 +268,7 @@ i:hover {
 
 /* cart page */
 
-.cartArea {
+.cart-area {
     width: 100%;
     min-height: 425px;
     height: auto;
@@ -277,7 +277,7 @@ i:hover {
     padding-bottom: 68px;
 }
 
-.cartTitle {
+.cart-title {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -285,7 +285,7 @@ i:hover {
     padding-bottom: 4px;
 }
 
-.clearCart {
+.clear-cart {
     font-size: 20px;
     height: 48px;
 }
@@ -306,7 +306,7 @@ i:hover {
 }
 
 /* checkout */
-.checkoutArea {
+.checkout-area {
     width: 100%;
     height: 68px;
     border-top: 1.4px solid grey;
@@ -323,7 +323,7 @@ i:hover {
     font-weight: bold;
     font-size: 24px;
 }
-.checkoutBtn {
+.checkout-btn {
     padding-top: 6px;
     padding-left: 24px;
     padding-right: 24px;
@@ -356,7 +356,7 @@ form {
     width: 80%;
 }
 
-#coverpage {
+#cover-page {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -364,30 +364,30 @@ form {
     height: 100vh;
 }
 
-#coverpage p {
+#cover-page p {
     font-size: 20px;
 }
 
-#coverpage .notice {
+#cover-page .notice {
     font-size: 18px;
 }
 
-.registerbtn,
-.skipbtn {
+.register-btn,
+.skip-btn {
     width: 12em;
     border-radius: 0;
     margin: 8px;
     font-size: 18px;
 }
 
-#registerform {
+#register-form {
     height: 100vh;
     display: flex;
     align-items: center;
     width: 100%;
 }
 
-#registerform .row {
+#register-form .row {
     width: 100%;
 }
 
@@ -400,7 +400,7 @@ form {
         border-right: 0;
     }
 
-    #registerform .row .col-12 {
+    #register-form .row .col-12 {
         padding-top: 16px;
     }
  }
@@ -408,12 +408,12 @@ form {
 
 /* leaderboard */
 
-.flexbody {
+.flex-body {
     display: flex;
     flex-direction: column;
 }
 
-.pageTitle,
+.page-title,
 .board {
     flex: 0 1 auto;
 }
@@ -426,12 +426,12 @@ form {
 }
 
 
-.boardHead {
+.board-head {
     font-weight: 500 !important;
     font-size: 22px !important;
 }
 
-.boardRow {
+.board-row {
     font-size: 18px;
     width: 85%;
     display: flex;
