--- a/quizstyle.css
+++ b/quizstyle.css
@@ -1,46 +1,44 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    font-family: 'Oswald', sans-serif;
 }
 
 body {
-    background: #001e4d;
+    background: url(img/bg.png) no-repeat center center fixed; 
 }
 
 .app {
     background: #fff;
     width: 90%;
     max-width: 600px;
-    margin: 100px auto 0;
+    margin: 32px auto;
     border-radius: 10px;
     padding: 30px;
 }
 
 .app h1 {
-    font-size: 25px;
-    color: #001e4d;
-    font-weight: 600;
+    font-size: 30px;
+    font-weight: 500;
     border-bottom: 1px solid #333;
-    padding-bottom: 30px;
+    padding-bottom: 24px;
 }
 
 .quiz {
     padding: 20px 0;
-
 }
 
 .quiz h2 {
-    font-size: 18px;
-    color: #001e4d;
-    font-weight: 600;
+    font-size: 22px;
+    font-weight: 400;
 }
 
 .btn {
+    font-size: 18px;
+    font-weight: 300;
     background: #fff;
     color: #222;
-    font-weight: 500;
     width: 100%;
     border: 1px solid #222;
     padding: 10px;
@@ -82,8 +80,10 @@ body {
 }
 
 .question-image {
+    width: 100%;
+    height: 100%;
     max-width: 602px; /* Ensures the image is not larger than its container */
-    height: 500px; /* Maintains aspect ratio */
     display: block; /* Fixes any potential alignment issues */
     margin: 20px auto; /* Centers the image and adds some space around it */
+
 }
