--- a/css/quizstyle.css
+++ b/css/quizstyle.css
@@ -5,18 +5,19 @@
     font-family: 'Oswald', sans-serif;
 }
 
+/* styles loading page */
 .animation-center{  
-    z-index: 1000;
-    display: flex;
+    z-index: 1000; /* overlap all */
+    display: flex; /* flex settings center animation */
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: 100vh; /* takes up whole screen */
+    width: 100vw; /* takes up whole screen */
     background-color: white;
 }
 
-body {
+body { /* setting image bg */
     background: url(../img/quizbg.png) no-repeat center center fixed; 
 }
 
@@ -24,12 +25,12 @@ body {
     background: #fff;
     width: 90%;
     max-width: 600px;
-    margin: 32px auto;
-    border-radius: 10px;
+    margin: 32px auto; /* top bottom space and centers horizontally */
+    border-radius: 10px; /* rounded edges */
     padding: 30px;
 }
 
-.app h1 {
+.app h1 { /* header */
     font-size: 30px;
     font-weight: 500;
     border-bottom: 1px solid #333;
@@ -40,12 +41,12 @@ body {
     padding: 20px 0;
 }
 
-.quiz h2 {
+.quiz h2 { /* question */
     font-size: 22px;
     font-weight: 400;
 }
 
-.btn {
+.btn { /* answers */
     font-size: 18px;
     font-weight: 300;
     background: #fff;
@@ -57,7 +58,6 @@ body {
     text-align: left;
     border-radius: 4px;
     cursor: pointer;
-
 }
 
 .btn:hover:not([disabled]) {
@@ -65,7 +65,7 @@ body {
     color: #fff;
 }
 
-.btn:disabled{
+.btn:disabled{ /* if answer has been picked, show cursor as cancel */
     cursor: no-drop;
 }
 
@@ -77,7 +77,7 @@ body {
     width: 150px;
     border: 0;
     padding: 10px;
-    margin: 20px auto 0;
+    margin: 20px auto 0; /* top spacing, no bottom spacing, centers horizontally */
     border-radius: 4px;
     cursor: pointer;
     display: none;
@@ -98,8 +98,8 @@ body {
 .question-image {
     width: 100%;
     height: 100%;
-    max-width: 602px; /* Ensures the image is not larger than its container */
-    display: block; /* Fixes any potential alignment issues */
-    margin: 20px auto; /* Centers the image and adds some space around it */
+    max-width: 602px; /* ensures the image is not larger than its container */
+    display: block; /* fixes any potential alignment issues */
+    margin: 20px auto; /* centers the image and adds some space around it */
 
 }
